# ai-sahayak

./: .gitignore  design.md  requirements.md
app/backend/agents/: .env.example  COMPLETE_PROJECT_GUIDE.md  PHASED_DEVELOPMENT_PLAN.md  README.md  langgraph.json  pyproject.toml  requirements.txt  start_agent.sh  test_lang.py
app/backend/agents/scripts/: cli_chat.py  create_files.py  setup_db.py  test_graph.py
app/backend/agents/src/ai_sahayak/: main.py
app/backend/agents/src/ai_sahayak/api/: deps.py  server.py
app/backend/agents/src/ai_sahayak/api/routes/: chat.py  health.py  webhook_whatsapp.py
app/backend/agents/src/ai_sahayak/channels/: base.py  models.py
app/backend/agents/src/ai_sahayak/config/: settings.py
app/backend/agents/src/ai_sahayak/graphs/runtime/: executor.py
app/backend/agents/src/ai_sahayak/graphs/state/: conversation.py  user_context.py
app/backend/agents/src/ai_sahayak/graphs/workflows/: forecast.py  general.py  inventory.py  pricing.py  retail_assistant.py  sales.py
app/backend/agents/src/ai_sahayak/language/: constants.py
app/backend/agents/src/ai_sahayak/language/detection/: detector.py
app/backend/agents/src/ai_sahayak/language/localization/: formatter.py
app/backend/agents/src/ai_sahayak/language/translation/: bhashini_client.py  pipeline.py
app/backend/agents/src/ai_sahayak/memory/: conversation.py
app/backend/agents/src/ai_sahayak/prompts/: registry.py
app/backend/agents/src/ai_sahayak/schemas/: chat.py  webhook.py
app/backend/agents/src/ai_sahayak/utils/: ids.py  time.py
(+6 files in other folders)
